--- a/client/src/pages/Surveys/Surveys.css
+++ b/client/src/pages/Surveys/Surveys.css
@@ -19,9 +19,6 @@
   text-align: left;
 }
 
-.survey-list-container {
-  padding: 50px 0;
-}
 
 .survey-header h5 {
   color: #1E1E1E;
